--- a/app/src/main/res/layout/activity_order_clearing.xml
+++ b/app/src/main/res/layout/activity_order_clearing.xml
@@ -416,9 +416,8 @@
                         android:layout_width="0dp"
                         android:layout_weight="2">
                     <TextView
-                        android:layout_width="0dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="2"
                         android:gravity="left|center"
                         android:text="等待时间"/>
                         <TextView
