--- a/app/src/main/res/layout/fragment_my_orders.xml
+++ b/app/src/main/res/layout/fragment_my_orders.xml
@@ -7,7 +7,7 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin">
 
-    <com.threeti.yihaoshijie.widget.PullToRefreshView
+    <cn.people.weever.widget.PullToRefreshView
         android:id="@+id/pull_refresh_lv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,5 +20,5 @@
         android:scrollbars="none">
 
     </ListView>
-  </com.threeti.yihaoshijie.widget.PullToRefreshView>
+  </cn.people.weever.widget.PullToRefreshView>
 </RelativeLayout>
