--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -33,11 +33,12 @@
         android:text="乘车人:"/>
 
     <TextView
+        android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:gravity="left|center"
-        android:text="张三"/>
+        android:text=""/>
 </LinearLayout>
 
     <LinearLayout
@@ -52,6 +53,7 @@
             android:text="预约上车时间:"/>
 
         <TextView
+            android:id="@+id/tv_plant_start_date"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -71,6 +73,7 @@
             android:text="预约上车地点:"/>
 
         <TextView
+            android:id="@+id/tv_plant_start_address"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -91,6 +94,7 @@
             android:text="实际上车时间:"/>
 
         <TextView
+            android:id="@+id/tv_actual_start_date"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -110,6 +114,7 @@
             android:text="实际上车地点:"/>
 
         <TextView
+            android:id="@+id/tv_actual_start_address"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -129,6 +134,7 @@
             android:text="实际下车地点:"/>
 
         <TextView
+            android:id="@+id/tv_actual_end_address"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -148,6 +154,7 @@
             android:text="费用总计:"/>
 
         <TextView
+            android:id="@+id/tv_actual_all_cost"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -164,7 +171,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="left|center"
-            android:text="费用总计:"/>
+            android:text="费用明细:"/>
 
         <LinearLayout
             android:layout_width="0dp"
@@ -183,6 +190,7 @@
                     android:text="超时费用:"/>
 
                 <TextView
+                    android:id="@+id/tv_expire_time_cose"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -201,6 +209,7 @@
                     android:text="超里程费用:"/>
 
                 <TextView
+                    android:id="@+id/tv_expire_distance_cose"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
