--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -23,7 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="日租"/>
+            android:text=""/>
     </LinearLayout>
 
     <LinearLayout
@@ -43,7 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:text="张三"/>
+            android:text=""/>
     </LinearLayout>
 
     <LinearLayout
@@ -60,7 +60,7 @@
             android:text="时间："/>
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/tv_start_end_time"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
@@ -77,7 +77,7 @@
             android:layout_marginRight="@dimen/activity_horizontal_margin"
             android:text="状态："/>
         <TextView
-            android:id="@+id/txt_passenger"
+            android:id="@+id/txt_order_status"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
