--- a/app/src/main/res/layout/content_home.xml
+++ b/app/src/main/res/layout/content_home.xml
@@ -30,7 +30,7 @@
                 android:layout_weight="3"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
-                android:text="20km"/>
+                android:text=""/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_weight="2"
@@ -44,7 +44,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="3"
                 android:gravity="center_vertical"
-                android:text="20M" />
+                android:text="" />
         </LinearLayout>
 
         <LinearLayout
